ENG-1434 Fix content modals overflowing when text is very long

--- a/src/sass/patternfly.scss
+++ b/src/sass/patternfly.scss
@@ -138,4 +138,10 @@ $fa-square-o: "\f096";
   overflow: hidden;
 }
 
+.overflow-ellipsis {
+  line-height: 1.3;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 // sass-lint:enable class-name-format
